--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -4692,3 +4692,79 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   margin-top: -33px;
   font-size: 10px;
 }
+
+/* line 4911, ../../../scss/_clix2017.scss */
+#overlay {
+  /* we set all of the properties for are overlay */
+  height: 116px;
+  width: 1024px;
+  margin: 0 auto;
+  background: white;
+  color: #999999;
+  padding: 28px 10px 10px 0px;
+  position: absolute;
+  top: 40%;
+  left: 10%;
+  z-index: 1000;
+  text-align: center;
+  display: none;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -o-border-radius: 10px;
+  border-radius: 10px;
+}
+
+/* line 4931, ../../../scss/_clix2017.scss */
+#mask {
+  /* create are mask */
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 500;
+  width: 100%;
+  height: 100%;
+  display: none;
+}
+
+/* use :target to look for a link to the overlay then we find are mask */
+/* line 4942, ../../../scss/_clix2017.scss */
+#overlay:target, #overlay:target + #mask {
+  display: block;
+  opacity: 1;
+}
+
+/* line 4946, ../../../scss/_clix2017.scss */
+.close {
+  /* to make a nice looking pure CSS3 close button */
+  display: block;
+  position: absolute;
+  top: -20px;
+  right: -16px;
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+  height: 40px;
+  width: 40px;
+  line-height: 40px;
+  font-size: 34px;
+  text-decoration: none;
+  text-align: center;
+  font-weight: bold;
+  -webkit-border-radius: 40px;
+  -moz-border-radius: 40px;
+  -o-border-radius: 40px;
+  border-radius: 38px;
+}
+
+/* line 4965, ../../../scss/_clix2017.scss */
+#open-overlay {
+  /* open the overlay */
+  padding: 0px 0px;
+  color: gray;
+  text-decoration: none;
+  display: inline-block;
+  margin: 0px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -o-border-radius: 10px;
+}
