--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -4908,3 +4908,67 @@ ul.nav_menu_1 {
 
 }
 
+#overlay{ /* we set all of the properties for are overlay */
+    
+    height: 116px;
+    width: 1024px;
+    margin: 0 auto;
+    background: white;
+    color: #999999;
+    padding: 28px 10px 10px 0px;
+    position: absolute;
+    top: 40%;
+    left: 10%;
+    z-index: 1000;
+    text-align: center;
+    display: none;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -o-border-radius: 10px;
+    border-radius: 10px;
+}
+
+#mask{ /* create are mask */
+    position:fixed;
+    top:0;
+    left:0;
+    background:rgba(0,0,0,0.6);
+    z-index:500;
+    width:100%;
+    height:100%;
+    display:none;
+}
+/* use :target to look for a link to the overlay then we find are mask */
+#overlay:target, #overlay:target + #mask{
+    display:block;
+    opacity:1;
+}
+.close{ /* to make a nice looking pure CSS3 close button */
+    display: block;
+    position: absolute;
+    top: -20px;
+    right: -16px;
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    height: 40px;
+    width: 40px;
+    line-height: 40px;
+    font-size: 34px;
+    text-decoration: none;
+    text-align: center;
+    font-weight: bold;
+    -webkit-border-radius: 40px;
+    -moz-border-radius: 40px;
+    -o-border-radius: 40px;
+    border-radius: 38px
+}
+#open-overlay{ /* open the overlay */
+    padding: 0px 0px; 
+    color: gray;
+    text-decoration: none;
+    display: inline-block;
+    margin: 0px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -o-border-radius: 10px;
+}
