--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/footer_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/footer_clix.html
@@ -25,24 +25,25 @@
 							</a>
 						</div>
 						<hr/>
-						<p class="footer-small-text"><a href="">Terms of Use</a> | <a href="">Privacy</a></p>
+						<p class="footer-small-text">
+						<a href="#overlay" id="open-overlay">Terms of Use</a> | <a href="#overlay" id="open-overlay">Privacy</a></p>
 					</div>
 					<div class="right small-3 columns">
                 		<div class="footer_link_cont">
                 			<div class="links_collapse">
                 				<ul>
-									<li><a href="" target="_blank">About</a></li>
-									<li><a href="" target="_blank">Contact</a></li>
-									<li><a href="" target="_blank">Disclaimer</a></li>
+									<li><a href="http://clix.tiss.edu/about/" target="_blank">About</a></li>
+									<li><a href="http://clix.tiss.edu/contact/" target="_blank">Contact</a></li>
+									<li><a href="http://www.tiss.edu/disclaimer/" target="_blank">Disclaimer</a></li>
 								</ul>
 							</div>
-							<div class="show_foot_links">Show More</div>
+							{# <div class="show_foot_links">Show More</div> #}
 					</div>
 				</div>
 				<hr/>
 			<div class="row">
 				<div class="footer-bottom" style="text-align:center">
-					<h6>Powered by <a href="https://gitlab.com/gnowledge/gstudio/tree/f245470" target="_blank"><b>gstudio</b></a>  built at  <a href="http://www.hbcse.tifr.res.in/" target="_blank"><b>Gnowledge  Lab of HBCSE</b></a> & <a href="http://osid.org/" target="_blank"><b>OSID</b></a></h6>
+					<h6>Powered by<a href="https://gitlab.com/gnowledge/gstudio/tree/f245470" target="_blank"><b>gstudio</b></a>  built at  <a href="http://www.hbcse.tifr.res.in/" target="_blank"><b>Gnowledge  Lab of HBCSE</b></a> & <a href="http://osid.org/" target="_blank"><b>OSID</b></a></h6>
 					<br/>
 					<p class="footer-tiny"><i>Caveat Emptor! BETA site – testing in progress; please visit again for updates!</i></p>
 				</div>
@@ -50,6 +51,13 @@
 		</div>
 	</div>
 
+
+
+	<div id="overlay">
+		<a href="#" class="close">&times;</a>
+    <h2 style="font-size:35px">Coming Up! Please check after a while!</h2>
+	</div>
+	<div id="mask" onclick="document.location='#';"></div>
 
 
 </footer>
