--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -335,6 +335,7 @@ h5{
         }
 
 
+
         .forgot-password {
           label {
             // //font-size: 10px;
@@ -373,6 +374,25 @@ h5{
     }
 }
 
+
+.login-home-button{
+            border-radius: 5px;
+            text-transform: uppercase;
+            margin-left: 150px;
+            color: #ffc14e;
+            padding: 5px 17px;
+            font-family: "OpenSans-Semibold", sans-serif;
+            margin-top: 223px;
+            border: 2px solid #ffc14e;
+
+            &:hover{
+        background-color:rgba(255,193,78,0.3);
+        cursor:pointer;
+        color:white;
+    }
+
+            
+}
 
 
 .top-bar-second, .top-bar-second .name {
@@ -4972,3 +4992,6 @@ ul.nav_menu_1 {
     -moz-border-radius: 10px;
     -o-border-radius: 10px;
 }
+
+
+
