generating progress bar in user analytics

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
@@ -26,19 +26,19 @@
         <h5>Course status</h5>
         <div class="row">
           <div class="small-12 columns">
-            <span class="course-metric-heading">Module's Completion</span>
-            <h4 class="module_progress_stmt">{{module_progress_stmt}}</h4>
+            <span class="course-metric-heading">{{level1_lbl}}</span>
+            <h4 class="module_progress_stmt">{{level1_progress_stmt}}</h4>
             <div class="progress success round">
-                <div class="module_progress_meter meter" style="width:{{module_progress_meter}}%"></div>
+                <div class="module_progress_meter meter" style="width:{{level1_progress_meter}}%"></div>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="small-12 columns">
-            <span class="course-metric-heading">Unit's Completion</span>
-            <h4 class='units_progress_stmt'>{{units_progress_stmt}}</h4>
+            <span class="course-metric-heading">{{level2_lbl}}</span>
+            <h4 class='units_progress_stmt'>{{level2_progress_stmt}}</h4>
             <div class="progress success round">
-                <div class="unit_progress_meter meter" style="width:{{unit_progress_meter}}%"></div>
+                <div class="unit_progress_meter meter" style="width:{{level2_progress_meter}}%"></div>
             </div>
 
           </div>
