commented buddy for temp

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
@@ -13,8 +13,10 @@
 
  
  <!-- LMS.html -->
+{% comment %}
 
  {% include "ndf/buddy.html" %}
+{% endcomment %}
 
 {% include 'ndf/widget_user_access_modal.html' %}
 
