--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
@@ -13,7 +13,7 @@
                 <div class="gray-text">{{source_obj.name}}</div>
                 </div>
                 <div class="small-11 medium-11 large-11 columns">
-                    <input name="name" type="text" class="orange-button" style="margin-top:11px;margin-left:40px" placeholder="Enter Name" class="node_name" 
+                    <input name="name" type="text" class="orange-button node_name" style="margin-top:11px;margin-left:40px" placeholder="Enter Name"  
                     value="{{node_obj.name|safe}}"/>
                     <label class="node_name_empty hide" style="color:red">Please enter Name</label>
 
@@ -63,7 +63,7 @@
 <script type="text/javascript">
     $(document).on('submit','.node-create-edit-form',function(event){
         node_name_val = $(".node_name").val()
-        if(!node_name_val){
+        if(!node_name_val.replace(/\s/g, '').length){
             event.preventDefault()
             $('.node_name_empty').removeClass('hide')
         }
