motio game commented

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
@@ -29,10 +29,11 @@
                 <div style="width: 70%" class="app_desc">
                     <button type="button"  class="right orange-button" id="insert_turtle" >Insert TurtleJS</button>
                 </div>
-
+                {%comment%}
                 <div style="width: 90%" class="app_desc">
                     <button type="button"  class="right orange-button" id="insert_earth_rotation" >Insert Motion of the Earth</button>
                 </div>
+                {% endcomment %}
                 <div style="width: 90%" class="app_desc">
                     <button type="button"  class="right orange-button" id="insert_physics-video-player" >Insert Physics Video Player</button>
                 </div>
