updated stylings for note create in all env

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
@@ -3078,6 +3078,13 @@ $course-envelop-color: #fff;
       // display: none;
       background-color: #fff;
       padding-bottom: 30px;
+      //.group_sections_content{
+      //  margin-top:5px;
+      //}
+      .group_content{
+        margin-top:5px;
+        margin-left:0px;
+      }
 
       >div{
         background-color: #fff;
