--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -1921,10 +1921,6 @@ ul.jqtree-tree .jqtree-toggler {
   }
   .notebook-body {
     padding: 0px 0px;
-
-    .node-create-edit-form{
-        margin-top: 30px;
-    }
     .note-cards {
       .row {
         margin: 30px 0px;
@@ -2118,6 +2114,9 @@ ul.jqtree-tree .jqtree-toggler {
       // display: none;
       background-color: #fff;
       padding-bottom: 30px;
+      .group_sections_content{
+        margin-top:5px;
+      }
 
       >div{
         background-color: #fff;
