help page logic changed

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/help_page.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/help_page.html
@@ -4,7 +4,7 @@
  {{title}}
 {% endblock  %}
 {% block body_content %}
-
- {{page_obj.content|safe}}
-  
+   <div id="scstyle">
+   {{page_obj.content|safe}}
+   </div>
 {% endblock body_content %}
